Added dashboard url to odb
Signed-off-by: Jatin Naik <jnaik@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -62,6 +62,7 @@
           <li><span class="menu-subtitle-bold"><a href="/on-demand-service-broker/creating.html#sub-commands">Subcommands</a></span>
             <ul>
               <li><span class="topic"><a href="/on-demand-service-broker/creating.html#generate-manifest">generate-manifest</a></span></li>
+              <li><span class="topic"><a href="/on-demand-service-broker/creating.html#dashboard-url">dashboard-url</a></span></li>
               <li><span class="topic"><a href="/on-demand-service-broker/creating.html#create-binding">create-binding</a></span></li>
               <li><span class="topic"><a href="/on-demand-service-broker/creating.html#delete-binding">delete-binding</a></span></li>
             </ul>
