--- a/source/layouts/_page-footer.erb
+++ b/source/layouts/_page-footer.erb
@@ -1,4 +1,4 @@
 <% unless defined?(elastic_search?) && elastic_search? %>
   <gcse:searchresults></gcse:searchresults>
 <% end %>
-<%= render_repo_link(include_environments: ['staging']) %>
+<%= render_repo_link %>
