Rename inputs for manifest generation heading
Signed-off-by: Pavan Pinnaka <ppinnaka@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -50,7 +50,7 @@
             </ul>
           </li>
           <li>
-            <span class="menu-subtitle-bold"><a href="/on-demand-service-broker/creating.html#configuring-manifest-generation">Configuring manifest generation</a></span>
+            <span class="menu-subtitle-bold"><a href="/on-demand-service-broker/creating.html#inputs-for-manifest-generation">Inputs for manifest generation</a></span>
             <ul>
               <li><span class="topic"><a href="/on-demand-service-broker/creating.html#arbitrary-parameters">Arbitrary parameters</a></span></li>
               <li><span class="topic"><a href="/on-demand-service-broker/creating.html#previous-manifest-properties">Previous manifest properties</a></span></li>
