Menu for best practices on administering service instances with ODB
Signed-off-by: Jatin Naik <jnaik@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -95,9 +95,10 @@
             <ul>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#register-broker">register-broker</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#deregister-broker">deregister-broker</a></span></li>
+                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#administering-instances">Administering service instances</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#upgrading-the-broker">Upgrading the broker</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#upgrading-existing-service-instances">Upgrading existing service instances</a></span></li>
-                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#deleting-all-service-instances)">Deleting all service instances</a></span></li>
+                <li><span class="topic"><a href="/on-demand-service-broker/operating.html#deleting-all-service-instances">Deleting all service instances</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#updating-service-plans">Updating service plans</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#disabling-service-plans">Disabling service plans</a></span></li>
                 <li><span class="topic"><a href="/on-demand-service-broker/operating.html#removing-service-plans">Removing service plans</a></span></li>
