--- a/source/subnavs/pivotal_jmx_bridge_subnav.erb
+++ b/source/subnavs/pivotal_jmx_bridge_subnav.erb
@@ -16,7 +16,7 @@
           <span><a href="./use-metrics.html">Using JMX Bridge</a></span>
       </li>
       <li>
-          <span><a href="./self-signed.html">Using SSL with a Self-Signed Certificate in JMX Bridge</a></span>
+          <span><a href="./self-signed-ssl.html">Using SSL with a Self-Signed Certificate in JMX Bridge</a></span>
       </li>
       <li>
           <span><a href="./troubleshooting-uninstall-metrics.html">Troubleshooting and Uninstalling JMX Bridge</a></span>
