--- a/source/subnavs/push_subnav.erb
+++ b/source/subnavs/push_subnav.erb
@@ -1,113 +1,34 @@
-<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
-  <a class="sidenav-title" data-behavior="SubMenuMobile">
+<div id="sub-nav" class="js-sidenav nav-container" role="navigation">
+    <a class="sidenav-title" data-behavior="SubMenuMobile">
     Doc Index
   </a>
-  <div class="nav-content">
-    <ul class="menu">
-      <li>
-        <span class="topic">
-          <a id='home-nav-link' href="/push/index.html">Push Notification Service</a>
-        </span>
-      </li>
-
-      <li>
-        <span>
-          <a href="/push/installation.html">Installation</a>
-        </span>
-      </li>
-
-      <li>
-        <span>
-          <a href="/push/devops.html">DevOps Guide</a>
-        </span>
-      </li>
-
-      <li>
-        <span>
-          <a href="/push/release-notes.html">Release Notes</a>
-        </span>
-      </li>
-
-      <li>
-        <span>
-          <a href="/push/v1_4_0/dashboard-user-guide.html">Dashboard User Guide</a>
-        </span>
-      </li>
-
-      <li>
-        <span>
-          <a href="/push/network.html">Network Setup Guide</a>
-        </span>
-      </li>
-
-      <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="">Development Guide</a>
-        </span>
+    <div class="nav-content">
         <ul>
-          <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/first-push-walkthrough/index.html">First Push Walkthrough</a>
-            </span>
-          </li>
-          <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/geofence-walkthrough/index.html">First Geofence Walkthrough</a>
-            </span>
-          </li>
-          <li>
-            <span class="topic">
-              <a href="/push/ios/index.html">iOS</a>
-            </span>
-          </li>
-          <li>
-            <span class="topic">
-              <a href="/push/android/index.html">Android</a>
-            </span>
-          </li>
-          <li>
-            <span class="topic">
-              <a href="/push/windowsphone81/index.html">Windows Phone 8.1</a>
-            </span>
-          </li>
-
+            <li><a href="/push/index.html">Push Notification Service</a></li>
+            <li><a href="/push/installation.html">Installation</a></li>
+            <li><a href="/push/devops.html">DevOps Guide</a></li>
+            <li><a href="/push/release-notes.html">Release Notes</a></li>
+            <li><a href="/push/v1_4_0/dashboard-user-guide.html">Dashboard User Guide</a></li>
+            <li><a href="/push/network.html">Network Setup Guide</a></li>
+            <li class="has_submenu"><a href="/push/development-guide.html">Development Guide</a>
+                <ul>
+                    <li><a href="/push/v1_4_0/first-push-walkthrough/index.html">First Push Walkthrough</a></li>
+                    <li><a href="/push/v1_4_0/geofence-walkthrough/index.html">First Geofence Walkthrough</a></li>
+                    <li><a href="/push/ios/index.html">iOS</a></li>
+                    <li><a href="/push/android/index.html">Android</a></li>
+                    <li><a href="/push/windowsphone81/index.html">Windows Phone 8.1</a></li>
+                </ul>
+            </li>
+            <li class="has_submenu"><a href="/push/v1_4_0/api/push/index.html">APIs</a>
+                <ul>
+                    <li><a href="/push/v1_4_0/api/push/index.html">Push API</a></li>
+                    <li><a href="/push/v1_4_0/api/registration/index.html">Registration API</a></li>
+                    <li><a href="/push/v1_4_0/api/tags/index.html">Tags API</a></li>
+                    <li><a href="/push/v1_4_0/api/schedules/index.html">Schedules API</a></li>
+                    <li><a href="/push/v1_4_0/api/schedules/index.html">Schedules API</a></li>
+                    <li><a href="/push/v1_4_0/api/geofences/index.html">Geofences API</a></li>
+                </ul>
+            </li>
         </ul>
-      </li>
-
-      <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="">APIs</a>
-        </span>
-        <ul>
-          <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/api/push/index.html">Push API</a>
-            </span>
-          </li>
-          <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/api/registration/index.html">Registration API</a>
-            </span>
-          </li>
-          <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/api/tags/index.html">Tags API</a>
-            </span>
-          </li>
-          <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/api/schedules/index.html">Schedules API</a>
-            </span>
-          </li>
-          <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/api/geofences/index.html">Geofences API</a>
-            </span>
-          </li>
-
-        </ul>
-      </li>
-
-    </ul>
-  </div>
-</div><!--end of sub-nav-->
+    </div>
+</div>
