Update subnavs for new styling/js
[#121262305]

Signed-off-by: Han Chen <hchen@pivotal.io>

--- a/source/subnavs/pivotal_rabbitmq_service_subnav.erb
+++ b/source/subnavs/pivotal_rabbitmq_service_subnav.erb
@@ -3,71 +3,49 @@
     Doc Index
   </a>
   <div class="nav-content">
-    <ul class="menu">
+    <ul>
       <li>
-        <span class="topic">
-          <a id='home-nav-link' href="/rabbitmq-cf/index.html">RabbitMQ for PCF&reg;</a>
-        </span>
+        <a href="/rabbitmq-cf/index.html">RabbitMQ for PCF&reg;</a>
       </li>
 
       <li>
-        <span>
-          <a href="/rabbitmq-cf/deploying.html">Deploying</a>
-        </span>
+        <a href="/rabbitmq-cf/deploying.html">Deploying</a>
       </li>
 
       <li>
-        <span>
-          <a href="/rabbitmq-cf/upgrade.html">Upgrades</a>
-        </span>
+        <a href="/rabbitmq-cf/upgrade.html">Upgrades</a>
       </li>
 
       <li>
-        <span>
-          <a href="/rabbitmq-cf/configuring.html">Configuring</a>
-        </span>
+        <a href="/rabbitmq-cf/configuring.html">Configuring</a>
       </li>
 
       <li>
-        <span>
-          <a href="/rabbitmq-cf/policies.html">Policies</a>
-        </span>
+        <a href="/rabbitmq-cf/policies.html">Policies</a>
       </li>
 
       <li>
-        <span>
-          <a href="/rabbitmq-cf/partitions.html">Clustering and Network Partitions</a>
-        </span>
+        <a href="/rabbitmq-cf/partitions.html">Clustering and Network Partitions</a>
       </li>
 
       <li>
-        <span>
-          <a href="/rabbitmq-cf/managing.html">Managing</a>
-        </span>
+        <a href="/rabbitmq-cf/managing.html">Managing</a>
       </li>
 
       <li>
-        <span>
-          <a href="/rabbitmq-cf/vcap-services.html">Environment Variables</a>
-        </span>
+        <a href="/rabbitmq-cf/vcap-services.html">Environment Variables</a>
       </li>
 
       <li>
-        <span>
-          <a href="/rabbitmq-cf/metrics_logging.html">Logging, Heartbeats, and Metrics</a>
-        </span>
+        <a href="/rabbitmq-cf/metrics_logging.html">Logging, Heartbeats, and Metrics</a>
       </li>
 
       <li>
-        <span>
-          <a href="/rabbitmq-cf/releases.html">Release Notes</a>
-        </span>
+        <a href="/rabbitmq-cf/releases.html">Release Notes</a>
       </li>
 
       <li>
-        <span>
-          <a href="/rabbitmq-cf/resources.html">Resource Requirements</a>
-        </span>
+        <a href="/rabbitmq-cf/resources.html">Resource Requirements</a>
       </li>
 
     </ul>
