--- a/source/subnavs/pivotal_service_backups_subnav.erb
+++ b/source/subnavs/pivotal_service_backups_subnav.erb
@@ -3,46 +3,32 @@
     Doc Index
   </a>
   <div class="nav-content">
-    <ul class="menu">
+    <ul>
       <li>
-        <span class="topic">
-          <a id='home-nav-link' href="/service-backup/index.html">Service Backups for Pivotal Cloud Foundry&reg;</a>
-        </span>
+        <a id='home-nav-link' href="/service-backup/index.html">Service Backups for Pivotal Cloud Foundry&reg;</a>
       </li>
 
-      <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="/service-backup/index.html#configuration">Configuration</a>
-        </span>
+      <li class="has_submenu">
+        <a href="/service-backup/index.html#configuration">Configuration</a>
         <ul>
           <li>
-            <span class="topic">
-              <a href="/service-backup/index.html#uploading">Uploading a service backup release</a>
-            </span>
+            <a href="/service-backup/index.html#uploading">Uploading a service backup release</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/service-backup/index.html#configuring">Configuring the manifest</a>
-            </span>
+            <a href="/service-backup/index.html#configuring">Configuring the manifest</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/service-backup/index.html#backup-destinations">Backup Destinations</a>
-            </span>
+            <a href="/service-backup/index.html#backup-destinations">Backup Destinations</a>
           </li>
 
         </ul>
       </li>
 
-      <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="/service-backup/index.html#operating">Operating</a>
-        </span>
+      <li class="has_submenu">
+        <a href="/service-backup/index.html#operating">Operating</a>
         <ul>
           <li>
-            <span class="topic">
-              <a href="/service-backup/index.html#locating-the-backups">Locating the backups</a>
-            </span>
+            <a href="/service-backup/index.html#locating-the-backups">Locating the backups</a>
           </li>
         </ul>
       </li>
