--- a/source/subnavs/push_subnav.erb
+++ b/source/subnavs/push_subnav.erb
@@ -3,106 +3,70 @@
     Doc Index
   </a>
   <div class="nav-content">
-    <ul class="menu">
+    <ul>
       <li>
-        <span class="topic">
-          <a id='home-nav-link' href="/push/index.html">Push Notification Service</a>
-        </span>
+        <a href="/push/index.html">Push Notification Service</a>
       </li>
 
       <li>
-        <span>
-          <a href="/push/installation.html">Installation</a>
-        </span>
+        <a href="/push/installation.html">Installation</a>
       </li>
 
       <li>
-        <span>
-          <a href="/push/devops.html">DevOps Guide</a>
-        </span>
+        <a href="/push/devops.html">DevOps Guide</a>
       </li>
 
       <li>
-        <span>
-          <a href="/push/release-notes.html">Release Notes</a>
-        </span>
+        <a href="/push/release-notes.html">Release Notes</a>
       </li>
 
       <li>
-        <span>
-          <a href="/push/v1_4_0/dashboard-user-guide.html">Dashboard User Guide</a>
-        </span>
+        <a href="/push/v1_4_0/dashboard-user-guide.html">Dashboard User Guide</a>
       </li>
 
       <li>
-        <span>
-          <a href="/push/network.html">Network Setup Guide</a>
-        </span>
+        <a href="/push/network.html">Network Setup Guide</a>
       </li>
 
-      <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="">Development Guide</a>
-        </span>
+      <li class="has_submenu">
+        <span>Development Guide</span>
         <ul>
           <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/first-push-walkthrough/index.html">First Push Walkthrough</a>
-            </span>
+            <a href="/push/v1_4_0/first-push-walkthrough/index.html">First Push Walkthrough</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/geofence-walkthrough/index.html">First Geofence Walkthrough</a>
-            </span>
+            <a href="/push/v1_4_0/geofence-walkthrough/index.html">First Geofence Walkthrough</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/push/ios/index.html">iOS</a>
-            </span>
+            <a href="/push/ios/index.html">iOS</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/push/android/index.html">Android</a>
-            </span>
+            <a href="/push/android/index.html">Android</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/push/windowsphone81/index.html">Windows Phone 8.1</a>
-            </span>
+            <a href="/push/windowsphone81/index.html">Windows Phone 8.1</a>
           </li>
 
         </ul>
       </li>
 
-      <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="">APIs</a>
-        </span>
+      <li class="has_submenu">
+        <span>APIs</span>
         <ul>
           <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/api/push/index.html">Push API</a>
-            </span>
+            <a href="/push/v1_4_0/api/push/index.html">Push API</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/api/registration/index.html">Registration API</a>
-            </span>
+            <a href="/push/v1_4_0/api/registration/index.html">Registration API</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/api/tags/index.html">Tags API</a>
-            </span>
+            <a href="/push/v1_4_0/api/tags/index.html">Tags API</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/api/schedules/index.html">Schedules API</a>
-            </span>
+            <a href="/push/v1_4_0/api/schedules/index.html">Schedules API</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/push/v1_4_0/api/geofences/index.html">Geofences API</a>
-            </span>
+            <a href="/push/v1_4_0/api/geofences/index.html">Geofences API</a>
           </li>
 
         </ul>
