--- a/source/subnavs/mobile_subnav.erb
+++ b/source/subnavs/mobile_subnav.erb
@@ -3,93 +3,61 @@
     Doc Index
   </a>
   <div class="nav-content">
-    <ul class="menu">
+    <ul>
       <li>
-        <span class="topic">
-          <a id='home-nav-link' href="/mobile/index.html">Pivotal Cloud Foundry Mobile Services&#153;</a>
-        </span>
+        <a id='home-nav-link' href="/mobile/index.html">Pivotal Cloud Foundry Mobile Services&#153;</a>
       </li>
 
-      <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="/mobile/apigateway/index.html">API Gateway</a>
-        </span>
+      <li class="has_submenu">
+        <a href="/mobile/apigateway/index.html">API Gateway</a>
         <ul>
           <li>
-            <span class="topic">
-              <a href="/mobile/apigateway/installation.html">Installation</a>
-            </span>
+            <a href="/mobile/apigateway/installation.html">Installation</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/mobile/apigateway/dashboard-user-guide.html">Dashboard User Guide</a>
-            </span>
+            <a href="/mobile/apigateway/dashboard-user-guide.html">Dashboard User Guide</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/mobile/apigateway/development-guide/index.html">Development Guide</a>
-            </span>
+            <a href="/mobile/apigateway/development-guide/index.html">Development Guide</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/mobile/apigateway/release-notes.html">Release Notes</a>
-            </span>
+            <a href="/mobile/apigateway/release-notes.html">Release Notes</a>
           </li>
         </ul>
       </li>
 
-      <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="/mobile/app_analytics/index.html">App Analytics (Beta)</a>
-        </span>
+      <li class="has_menu">
+        <a href="/mobile/app_analytics/index.html">App Analytics (Beta)</a>
         <ul>
           <li>
-            <span class="topic">
-              <a href="/mobile/app_analytics/installation.html">Installation</a>
-            </span>
+            <a href="/mobile/app_analytics/installation.html">Installation</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/mobile/app_analytics/dashboard-user-guide.html">Dashboard User Guide</a>
-            </span>
+            <a href="/mobile/app_analytics/dashboard-user-guide.html">Dashboard User Guide</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/mobile/app_analytics/development-guide.html">Development Guide</a>
-            </span>
+            <a href="/mobile/app_analytics/development-guide.html">Development Guide</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/mobile/app_analytics/release-notes.html">Release Notes</a>
-            </span>
+            <a href="/mobile/app_analytics/release-notes.html">Release Notes</a>
           </li>
         </ul>
       </li>
 
-      <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="/mobile/data/index.html">Data Sync</a>
-        </span>
+      <li class="has_submenu">
+        <a href="/mobile/data/index.html">Data Sync</a>
         <ul>
           <li>
-            <span class="topic">
-              <a href="/mobile/data/installation.html">Installation</a>
-            </span>
+            <a href="/mobile/data/installation.html">Installation</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/mobile/data/dashboard-user-guide.html">Dashboard User Guide</a>
-            </span>
+            <a href="/mobile/data/dashboard-user-guide.html">Dashboard User Guide</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/mobile/data/development-guide.html">Development Guide</a>
-            </span>
+            <a href="/mobile/data/development-guide.html">Development Guide</a>
           </li>
           <li>
-            <span class="topic">
-              <a href="/mobile/data/release-notes.html">Release Notes</a>
-            </span>
+            <a href="/mobile/data/release-notes.html">Release Notes</a>
           </li>
         </ul>
       </li>
