--- a/source/subnavs/pivotal_logsearch_subnav.erb
+++ b/source/subnavs/pivotal_logsearch_subnav.erb
@@ -3,26 +3,24 @@
     Doc Index
   </a>
   <div class="nav-content">
-    <ul class="menu">
+    <ul>
       <li>
-        <span class="topic">
-          <a id='home-nav-link' href="/logsearch/index.html">Pivotal Cloud Foundry&reg; Log Search</a>
-        </span>
+        <a id='home-nav-link' href="/logsearch/index.html">Pivotal Cloud Foundry&reg; Log Search</a>
       </li>
       <li>
-          <span><a href="/logsearch/installing.html">Installing PCF Log Search</a></span>
+          <a href="/logsearch/installing.html">Installing PCF Log Search</a>
       </li>
       <li>
-          <span><a href="/logsearch/scaling.html">Scaling PCF Log Search</a></span>
+          <a href="/logsearch/scaling.html">Scaling PCF Log Search</a>
       </li>
       <li>
-          <span><a href="/logsearch/using.html">Using PCF Log Search</a></span>
+          <a href="/logsearch/using.html">Using PCF Log Search</a>
       </li>
       <li>
-          <span><a href="/logsearch/search-guide.html">PCF Log Search Tags Dictionary</a></span>
+          <a href="/logsearch/search-guide.html">PCF Log Search Tags Dictionary</a>
       </li>
       <li>
-          <span><a href="/logsearch/release.html">Release Notes</a></span>
+          <a href="/logsearch/release.html">Release Notes</a>
       </li>
      </ul>
     </div>
