Remove some more deprecated classes from subnavs
[#121262305 #121601133]

Signed-off-by: Gregg Van Hove <gvanhove@pivotal.io>

--- a/source/subnavs/app_dist_subnav.erb
+++ b/source/subnavs/app_dist_subnav.erb
@@ -1,4 +1,4 @@
-<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
+<div id="sub-nav" class="js-sidenav nav-container" role="navigation">
   <a class="sidenav-title" data-behavior="SubMenuMobile">
     Doc Index
   </a>
