updated the sidebar for odb troubleshooting
Signed-off-by: Jatin Naik <jnaik@pivotal.io>

--- a/source/subnavs/pivotal_on_demand_broker_subnav.erb
+++ b/source/subnavs/pivotal_on_demand_broker_subnav.erb
@@ -188,7 +188,6 @@
           </li>
           <li class="has_submenu">
             <a href="/on-demand-service-broker/operating.html#troubleshooting">Troubleshooting</a>
-
             <ul>
               <li>
                 <a href="/on-demand-service-broker/operating.html#logs">Logs</a>
@@ -198,6 +197,12 @@
               </li>
               <li>
                 <a href="/on-demand-service-broker/operating.html#identifying-tasks">Identifying BOSH tasks</a>
+              </li>
+              <li>
+                <a href="/on-demand-service-broker/operating.html#identifying-bosh-uaa-issues">Identifying issues with connecting to BOSH and/or UAA</a>
+              </li>
+              <li>
+                <a href="/on-demand-service-broker/operating.html#listing-service-instances">Listing service instances</a>
               </li>
             </ul>
           </li>
