--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -64,12 +64,29 @@
 
           <div class="header-dropdown-content">
             <ul>
+              <li><a href="/edge/p-mysql/">v1.8</a></li>
               <li><a href="/archives/p-mysql/mysql-docs-1.6.pdf">v1.6</a></li>
               <li><a href="/archives/p-mysql/mysql-docs-1.5.pdf">v1.5</a></li>
               <li><a href="/archives/p-mysql/mysql-docs-1.4.pdf">v1.4</a></li>
             </ul>
           </div>
         </div>
+      <% when /^edge / %>
+        <div class="header-dropdown">
+          <a class="header-dropdown-link">
+            v1.8
+          </a>
+
+          <div class="header-dropdown-content">
+            <ul>
+              <li><a href="/p-mysql/">v1.7</a></li>
+              <li><a href="/archives/p-mysql/mysql-docs-1.6.pdf">v1.6</a></li>
+              <li><a href="/archives/p-mysql/mysql-docs-1.5.pdf">v1.5</a></li>
+              <li><a href="/archives/p-mysql/mysql-docs-1.4.pdf">v1.4</a></li>
+            </ul>
+          </div>
+        </div>
+
       <% when /^p-identity / %>
         <div class="header-dropdown">
           <a class="header-dropdown-link">
