--- a/source/subnavs/pivotal_jmx_bridge_subnav.erb
+++ b/source/subnavs/pivotal_jmx_bridge_subnav.erb
@@ -1,26 +1,24 @@
-<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
+<div id="sub-nav" class="js-sidenav nav-container" role="navigation">
   <a class="sidenav-title" data-behavior="SubMenuMobile">
     Doc Index
   </a>
   <div class="nav-content">
-    <ul class="menu">
+    <ul>
       <li>
-        <span class="topic">
-          <a id='home-nav-link' href="./index.html">Pivotal Cloud Foundry&reg; JMX Bridge</a>
-        </span>
+          <a id='home-nav-link' href="./index.html">Pivotal Cloud Foundry&reg; JMX Bridge
       </li>
       <li>
-          <span><a href="./deploy-metrics.html">Deploying JMX Bridge</a></span>
+          <a href="./deploy-metrics.html">Deploying JMX Bridge</a>
       </li>
       <li>
-          <span><a href="./use-metrics.html">Using JMX Bridge</a></span>
+          <a href="./use-metrics.html">Using JMX Bridge</a>
       </li>
       <li>
-          <span><a href="./self-signed-ssl.html">Using SSL with a Self-Signed Certificate in JMX Bridge</a></span>
+          <a href="./self-signed-ssl.html">Using SSL with a Self-Signed Certificate in JMX Bridge</a>
       </li>
       <li>
-          <span><a href="./troubleshooting-uninstall-metrics.html">Troubleshooting and Uninstalling JMX Bridge</a></span>
+          <a href="./troubleshooting-uninstall-metrics.html">Troubleshooting and Uninstalling JMX Bridge</a>
       </li>
-     </ul>
-    </div>
+    </ul>
+  </div>
 </div>
