Fixes jmx subnav[#120875689]

--- a/source/subnavs/pivotal_jmx_bridge_subnav.erb
+++ b/source/subnavs/pivotal_jmx_bridge_subnav.erb
@@ -5,7 +5,7 @@
   <div class="nav-content">
     <ul>
       <li>
-          <a id='home-nav-link' href="./index.html">Pivotal Cloud Foundry&reg; JMX Bridge
+          <a id='home-nav-link' href="./index.html">Pivotal Cloud Foundry&reg; JMX Bridge</a>
       </li>
       <li>
           <a href="./deploy-metrics.html">Deploying JMX Bridge</a>
