Update mermaid to latest to fix broken graphs on chrome
[fix #121960703]

--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -1,5 +1,7 @@
 @import "partials/mixins";
 
+@import "vendor/mermaid";
+
 // content
 @import "partials/3rdparty";
 @import "partials/global-header";
