--- a/source/subnavs/pivotal_jmx_bridge_subnav.erb
+++ b/source/subnavs/pivotal_jmx_bridge_subnav.erb
@@ -5,20 +5,20 @@
   <div class="nav-content">
     <ul>
       <li>
-          <a id='home-nav-link' href="./index.html">Pivotal Cloud Foundry&reg; JMX Bridge</a>
+        <a href="/jmx-bridge/index.html">Pivotal Cloud Foundry&reg; JMX Bridge</a>
       </li>
       <li>
-          <a href="./deploy-metrics.html">Deploying JMX Bridge</a>
+          <a href="/jmx-bridge/deploy-metrics.html">Deploying JMX Bridge</a>
       </li>
       <li>
-          <a href="./use-metrics.html">Using JMX Bridge</a>
+          <a href="/jmx-bridge/use-metrics.html">Using JMX Bridge</a>
       </li>
       <li>
-          <a href="./self-signed-ssl.html">Using SSL with a Self-Signed Certificate in JMX Bridge</a>
+          <a href="/jmx-bridge/self-signed-ssl.html">Using SSL with a Self-Signed Certificate in JMX Bridge</a>
       </li>
       <li>
-          <a href="./troubleshooting-uninstall-metrics.html">Troubleshooting and Uninstalling JMX Bridge</a>
+          <a href="/jmx-bridge/troubleshooting-uninstall-metrics.html">Troubleshooting and Uninstalling JMX Bridge</a>
       </li>
-    </ul>
-  </div>
+     </ul>
+    </div>
 </div>
