add dropdown menu for versions in pcf metrics[#121769963]

--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -68,7 +68,7 @@
             </ul>
           </div>
         </div>
-      <% when /^edge\/pcf-metrics / %>
+      <% when /^pcf-metrics-edge / %>
         <div class="header-dropdown">
           <a class="header-dropdown-link">
             Edge
@@ -96,7 +96,7 @@
             </ul>
           </div>
         </div>
-      <% when /^edge\/p-mysql / %>
+      <% when /^edge / %>
         <div class="header-dropdown">
           <a class="header-dropdown-link">
             v1.8
