--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -1,4 +1,4 @@
-<% if vars.use_global_header && current_page.data.owner != "Identity Service" && current_page.data.owner != "MySQL" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" %>
+<% if vars.use_global_header && current_page.data.owner != "Identity Service" && current_page.data.owner != "MySQL" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" && current_page.data.owner != "PCF Metrics" %>
   <header class="global-header header header-layout js-bar-links">
     <a class="pivotal-logo" href="/">
     </a>
@@ -64,7 +64,7 @@
 
           <div class="header-dropdown-content">
             <ul>
-              <li><a href="/edge/pcf-metrics/">Edge</a></li>
+              <li><a href="/pcf-metrics-edge/">Edge</a></li>
             </ul>
           </div>
         </div>
