--- a/source/layouts/_book-footer.erb
+++ b/source/layouts/_book-footer.erb
@@ -1,5 +1,5 @@
 <div class="copyright">
-  <a href='http://pivotal.io/privacy-policy'>Privacy Policy</a>
+  <a href='http://pivotal.io/privacy-policy'>Privacy Policy</a> | 
   <a href='http://pivotal.io/terms-of-use'>Terms of Use</a><br/>
   <a href='/'>Pivotal Documentation</a>
   &copy; <%= Time.now.year %> <a href='http://pivotal.io'>Pivotal Software</a>, Inc. All Rights Reserved.
