fix broken metrics edge link

--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -64,11 +64,11 @@
 
           <div class="header-dropdown-content">
             <ul>
-              <li><a href="/edge/pcf-metrics/">Edge</a></li>
+              <li><a href="/pcf-metrics-edge/">Edge</a></li>
             </ul>
           </div>
         </div>
-      <% when /^edge\/metrics / %>
+      <% when /^pcf-metrics-edge / %>
         <div class="header-dropdown">
           <a class="header-dropdown-link">
             Edge
