Allow a book to specify a header to go under the global header
- remove some old js and css

[finish #121185615]

--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -68,15 +68,16 @@ header.global-header {
     }
   }
 
-  .header-home-global {
-    background: $color-bg-header;
-    color: #fff;
-    padding: 2em 1.5em;
-    text-align: center;
-    margin-top: 64px;
-  }
-
   .btn-menu:before {
     font-size: $font-size-l;
   }
 }
+
+header.header-home-global {
+  background: $color-bg-header;
+  color: #fff;
+  padding: 2em 1.5em;
+  text-align: center;
+  margin-top: 64px;
+}
+
