capitalizes subnav for service-metrics

--- a/source/subnavs/pivotal_service_metrics_subnav.erb
+++ b/source/subnavs/pivotal_service_metrics_subnav.erb
@@ -18,13 +18,13 @@
 
       <li>
         <span>
-          <a href="/service-metrics/author.html">Integrating a service with service metrics</a>
+          <a href="/service-metrics/author.html">Integrating a Service with Service Metrics</a>
         </span>
       </li>
 
       <li>
         <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
-          <a href="/service-metrics/operator.html">Deploying a release that uses service metrics</a>
+          <a href="/service-metrics/operator.html">Deploying a Release that Uses Service Metrics</a>
         </span>
       </li>
     </ul>
