Link to archived Spring Cloud Services 1.0 docs

--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -139,10 +139,13 @@
       <% when /^spring-cloud-services / %>
         <div class="header-dropdown">
           <a class="header-dropdown-link">
-            v1.0.0
+            v1.1
           </a>
           <div class="header-dropdown-content">
             <ul>
+              <li>
+                <a href="/archives/p-spring-cloud-services/spring-cloud-services-docs-1.0.pdf">v1.0</a>
+              </li>
               <li>
                 <a href="/archives/p-spring-cloud-services/spring-cloud-services-docs-0.1.1.BETA.pdf">v0.1.1.BETA</a>
               </li>
