Add subnav to logsearch tile for app-sec-groups [#125015491]
Signed-off-by: Kira Combs <kcombs@pivotal.io>

--- a/source/subnavs/pivotal_logsearch_subnav.erb
+++ b/source/subnavs/pivotal_logsearch_subnav.erb
@@ -20,6 +20,9 @@
           <a href="/logsearch/search-guide.html">PCF Log Search Tags Dictionary</a>
       </li>
       <li>
+          <a href="/logsearch/app-sec-groups.html">PCF Log Search Application Security Groups</a>
+      </li>
+      <li>
           <a href="/logsearch/release.html">Release Notes</a>
       </li>
      </ul>
