--- a/source/subnavs/pivotal_service_metrics_subnav.erb
+++ b/source/subnavs/pivotal_service_metrics_subnav.erb
@@ -1,32 +1,21 @@
-<div id="sub-nav" class="deepnav-content js-deep-nav js-sidenav nav-container" role="navigation">
+<div id="sub-nav" class="js-sidenav nav-container" role="navigation">
   <a class="sidenav-title" data-behavior="SubMenuMobile">
     Doc Index
   </a>
-  <div class="nav-content deepnav-content">
-    <ul class="menu">
+  <div class="nav-content">
+    <ul>
       <li>
-        <span class="topic">
-          <a id='home-nav-link' href="/service-metrics/index.html">Service Metrics Release for Pivotal Cloud Foundry&reg;</a>
-        </span>
+        <a id='home-nav-link' href="/service-metrics/index.html">Service Metrics Release for Pivotal Cloud Foundry&reg;</a>
       </li>
-
       <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
           <a href="/service-metrics/overview.html">Overview</a>
-        </span>
       </li>
-
       <li>
-        <span>
           <a href="/service-metrics/author.html">Integrating a Service with Service Metrics</a>
-        </span>
       </li>
-
       <li>
-        <span class="hasSubMenuClosed" data-behavior="HasSubMenu">
           <a href="/service-metrics/operator.html">Deploying a Release that Uses Service Metrics</a>
-        </span>
       </li>
-    </ul>
-  </div>
-</div><!--end of sub-nav-->
+     </ul>
+    </div>
+</div>
