--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -1,4 +1,4 @@
-<% if vars.use_global_header && current_page.data.owner != "Identity Service" && current_page.data.owner != "MySQL" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" && current_page.data.owner != "PCF Metrics" %>
+<% if vars.use_global_header && current_page.data.owner != "London Services Enablement" && current_page.data.owner != "Identity Service" && current_page.data.owner != "MySQL" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" && current_page.data.owner != "PCF Metrics" %>
   <header class="global-header header header-layout js-bar-links">
     <a class="pivotal-logo" href="/">
     </a>
@@ -77,6 +77,19 @@
           <div class="header-dropdown-content">
             <ul>
               <li><a href="/pcf-metrics/">v1.7</a></li>
+            </ul>
+          </div>
+        </div>
+
+      <% when /^on-demand-service-broker/ %>
+        <div class="header-dropdown">
+          <a class="header-dropdown-link">
+            All versions
+          </a>
+
+          <div class="header-dropdown-content">
+            <ul>
+              <li><a href="/on-demand-service-broker">v0.5.0</a></li>
             </ul>
           </div>
         </div>
