--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -1,4 +1,4 @@
-<% if vars.use_global_header && current_page.data.owner != "London Services Enablement" && current_page.data.owner != "Identity Service" && current_page.data.owner != "MySQL" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" && current_page.data.owner != "PCF Metrics" %>
+<% if vars.use_global_header && current_page.data.owner != "London Services Enablement" && current_page.data.owner != "Identity Service" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" && current_page.data.owner != "PCF Metrics" %>
   <header class="global-header header header-layout js-bar-links">
     <a class="pivotal-logo" href="/">
     </a>
@@ -91,37 +91,6 @@
             <ul>
               <li><a href="/on-demand-service-broker">v0.6.0</a></li>
               <li><a href="/on-demand-service-broker-v0-5-0">v0.5.0</a></li>
-            </ul>
-          </div>
-        </div>
-
-      <% when /^p-mysql / %>
-        <div class="header-dropdown">
-          <a class="header-dropdown-link">
-            v1.7
-          </a>
-
-          <div class="header-dropdown-content">
-            <ul>
-              <li><a href="/edge/p-mysql/">v1.8</a></li>
-              <li><a href="/archives/p-mysql/mysql-docs-1.6.pdf">v1.6</a></li>
-              <li><a href="/archives/p-mysql/mysql-docs-1.5.pdf">v1.5</a></li>
-              <li><a href="/archives/p-mysql/mysql-docs-1.4.pdf">v1.4</a></li>
-            </ul>
-          </div>
-        </div>
-      <% when /^edge\/p-mysql / %>
-        <div class="header-dropdown">
-          <a class="header-dropdown-link">
-            v1.8
-          </a>
-
-          <div class="header-dropdown-content">
-            <ul>
-              <li><a href="/p-mysql/">v1.7</a></li>
-              <li><a href="/archives/p-mysql/mysql-docs-1.6.pdf">v1.6</a></li>
-              <li><a href="/archives/p-mysql/mysql-docs-1.5.pdf">v1.5</a></li>
-              <li><a href="/archives/p-mysql/mysql-docs-1.4.pdf">v1.4</a></li>
             </ul>
           </div>
         </div>
