--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -59,12 +59,15 @@
       <% when /^pcf-metrics / %>
         <div class="header-dropdown">
           <a class="header-dropdown-link">
-            v1.7
+            v1.1
           </a>
 
           <div class="header-dropdown-content">
             <ul>
               <li><a href="/pcf-metrics-edge/">Edge</a></li>
+            </ul>
+            <ul>
+              <li><a href="/pcf-metrics-1-0/">v1.0</a></li>
             </ul>
           </div>
         </div>
