update version numbers for pcf metrics[#127497267]

--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -79,7 +79,26 @@
 
           <div class="header-dropdown-content">
             <ul>
-              <li><a href="/pcf-metrics/">v1.7</a></li>
+              <li><a href="/pcf-metrics/">v1.1</a></li>
+            </ul>
+            <ul>
+              <li><a href="/pcf-metrics-1-0/">v1.0</a></li>
+            </ul>
+          </div>
+        </div>
+
+      <% when /^pcf-metrics-1-0 / %>
+        <div class="header-dropdown">
+          <a class="header-dropdown-link">
+            v1.0
+          </a>
+
+          <div class="header-dropdown-content">
+            <ul>
+              <li><a href="/pcf-metrics/">v1.1</a></li>
+            </ul>
+            <ul>
+              <li><a href="/pcf-metrics-edge/">Edge</a></li>
             </ul>
           </div>
         </div>
