--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -1,4 +1,4 @@
-<% if vars.use_global_header && current_page.data.owner != "London Services Enablement" && current_page.data.owner != "Identity Service" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" && current_page.data.owner != "PCF Metrics" %>
+<% if vars.use_global_header && current_page.data.owner != "London Services Enablement" && current_page.data.owner != "Identity Service" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" %>
   <header class="global-header header header-layout js-bar-links">
     <a class="pivotal-logo" href="/">
     </a>
@@ -53,52 +53,6 @@
               <li><a href="/archives/pcf-docs-1.4.pdf">v1.4.0.0</a></li>
               <li><a href="/archives/pcf-docs-1.3.pdf">v1.3.0.0</a></li>
               <li><a href="/archives/pcf-docs-1.2.pdf">v1.2.0.0</a></li>
-            </ul>
-          </div>
-        </div>
-      <% when /^pcf-metrics / %>
-        <div class="header-dropdown">
-          <a class="header-dropdown-link">
-            v1.1
-          </a>
-
-          <div class="header-dropdown-content">
-            <ul>
-              <li><a href="/pcf-metrics-edge/">Edge</a></li>
-            </ul>
-            <ul>
-              <li><a href="/pcf-metrics-1-0/">v1.0</a></li>
-            </ul>
-          </div>
-        </div>
-      <% when /^pcf-metrics-edge / %>
-        <div class="header-dropdown">
-          <a class="header-dropdown-link">
-            Edge
-          </a>
-
-          <div class="header-dropdown-content">
-            <ul>
-              <li><a href="/pcf-metrics/">v1.1</a></li>
-            </ul>
-            <ul>
-              <li><a href="/pcf-metrics-1-0/">v1.0</a></li>
-            </ul>
-          </div>
-        </div>
-
-      <% when /^pcf-metrics-1-0 / %>
-        <div class="header-dropdown">
-          <a class="header-dropdown-link">
-            v1.0
-          </a>
-
-          <div class="header-dropdown-content">
-            <ul>
-              <li><a href="/pcf-metrics/">v1.1</a></li>
-            </ul>
-            <ul>
-              <li><a href="/pcf-metrics-edge/">Edge</a></li>
             </ul>
           </div>
         </div>
