--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -1,4 +1,4 @@
-<% if vars.use_global_header && current_page.data.owner != "London Services Enablement" && current_page.data.owner != "Identity Service" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" %>
+<% if vars.use_global_header && current_page.data.owner != "Identity Service" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" %>
   <header class="global-header header header-layout js-bar-links">
     <a class="pivotal-logo" href="/">
     </a>
@@ -53,21 +53,6 @@
               <li><a href="/archives/pcf-docs-1.4.pdf">v1.4.0.0</a></li>
               <li><a href="/archives/pcf-docs-1.3.pdf">v1.3.0.0</a></li>
               <li><a href="/archives/pcf-docs-1.2.pdf">v1.2.0.0</a></li>
-            </ul>
-          </div>
-        </div>
-
-      <% when /^on-demand-service-broker/ %>
-        <div class="header-dropdown">
-          <a class="header-dropdown-link">
-            All versions
-          </a>
-
-          <div class="header-dropdown-content">
-            <ul>
-              <li><a href="/on-demand-service-broker">v0.7.0</a></li>
-              <li><a href="/on-demand-service-broker-v0-6-0">v0.6.0</a></li>
-              <li><a href="/on-demand-service-broker-v0-5-0">v0.5.0</a></li>
             </ul>
           </div>
         </div>
