updates wording of 404 page

--- a/source/404.html.erb
+++ b/source/404.html.erb
@@ -1,13 +1,20 @@
 ---
-title: Page not Found
+title: Page Not Found
 ---
 
-Visit the <a href="/">homepage</a>.
+No topic matches this URL. 
+
+<br/>
+<br/>
+Visit the <a href="/">homepage</a> of this documentation site.
+<br/>
+OR 
+<br/>
+Visit the <a href="" id="topic_home">parent directory of this URL</a>.
 
 <br/>
 <br/>
 
-Visit the <a href="" id="topic_home">homepage for this topic</a>.
 <script type="text/javascript">
 var el = document.getElementById("topic_home");
 var currentPath = window.location.pathname;
