--- a/source/layouts/_additional-scripts.erb
+++ b/source/layouts/_additional-scripts.erb
@@ -42,9 +42,14 @@
 </script>
 
 <!-- CrazyEgg Tracking Script -->
-<script type="text/javascript">
-</script>
+  <script type="text/javascript">
+  setTimeout(function(){var a=document.createElement("script");
+  var b=document.getElementsByTagName("script")[0];
+  a.src=document.location.protocol+"//script.crazyegg.com/pages/scripts/0055/2990.js?"+Math.floor(new Date().getTime()/3600000);
+  a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
+  </script>
 
+<!-- Munchkin Marketo Script -->
 <script type="text/javascript">
   (function() {
     var didInit = false;
