Add local header to Spring Cloud Services

--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -1,4 +1,4 @@
-<% if vars.use_global_header && current_page.data.owner != "Identity Service" && current_page.data.owner != "Pivotal HD" &&  current_page.data.owner != "Spring Cloud Services" %>
+<% if vars.use_global_header && current_page.data.owner != "Identity Service" && current_page.data.owner != "Pivotal HD" %>
   <header class="global-header header header-layout js-bar-links">
     <a class="pivotal-logo" href="/">
     </a>
@@ -66,22 +66,6 @@
           <div class="header-dropdown-content">
             <ul>
               <li><a href="/archives/phd-data-service-v1.2.pdf">v1.2.0.0</a></li>
-            </ul>
-          </div>
-        </div>
-      <% when /^spring-cloud-services / %>
-        <div class="header-dropdown">
-          <a class="header-dropdown-link">
-            v1.1
-          </a>
-          <div class="header-dropdown-content">
-            <ul>
-              <li>
-                <a href="/archives/p-spring-cloud-services/spring-cloud-services-docs-1.0.pdf">v1.0</a>
-              </li>
-              <li>
-                <a href="/archives/p-spring-cloud-services/spring-cloud-services-docs-0.1.1.BETA.pdf">v0.1.1.BETA</a>
-              </li>
             </ul>
           </div>
         </div>
