--- a/source/layouts/_feedback.erb
+++ b/source/layouts/_feedback.erb
@@ -2,7 +2,7 @@
   <hr>
   <form data-behavior="SubmitFeedback">
     <fieldset id="feedback-helpful">
-      <legend>Was this topic helpful?</legend>
+      <legend>Was this page helpful?</legend>
       <div class="feedback-option">
         <input type="radio" name="helpful" value="true" id="is-helpful" required />
         <label for="is-helpful">Yes</label>
@@ -13,14 +13,14 @@
       </div>
     </fieldset>
     <fieldset id="feedback-comments">
-      <legend>Suggestions for improvement</legend>
+      <legend>How can we improve this page?</legend>
       <textarea name="comments" placeholder="I would like this topic to..."></textarea>
     </fieldset>
     <input type="hidden" name="date" />
     <input type="hidden" name="page_url" />
     <div id="errors">
     </div>
-    <input type="submit" value="Submit" id="feedback-submit"/>
+    <input type="submit" value="Submit Feedback" id="feedback-submit"/>
   </form>
   <hr>
 </div>
