--- a/source/layouts/_page-footer.erb
+++ b/source/layouts/_page-footer.erb
@@ -1,4 +1,5 @@
 <% unless defined?(elastic_search?) && elastic_search? %>
   <gcse:searchresults></gcse:searchresults>
 <% end %>
+<%= yield_for_feedback %>
 <%= render_repo_link %>
