Adds highlighting to search results[#132006481]

--- a/source/stylesheets/partials/_search.scss
+++ b/source/stylesheets/partials/_search.scss
@@ -13,6 +13,12 @@
       &:first-child {
         margin-top: 0;
       }
+    em {
+      font-weight: bold;
+      font-style: normal;
+      background: #FFF6D9;
+      color: #806613;
+      }
     }
   }
 
