--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -5,7 +5,7 @@
  ======================================================================== */
 
 header.global-header {
-  background-color: #232B2F;
+  background-color: $global_header_bg_color;
   line-height: 64px;
   padding: 0;
   border: none;
@@ -16,12 +16,12 @@ header.global-header {
   }
 
   .pivotal-logo {
-    background-image: url(/images/icon-p-green.jpg);
+    background-image: $global_header_pivotal_logo;
     background-repeat: no-repeat;
     background-position: center left;
     background-size: 100%;
-    height: 64px;
-    width: 64px;
+    height: $global_header_pivotal_logo_height;
+    width: $global_header_pivotal_logo_width;
   }
 
   .global-header-title {
