--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -56,7 +56,7 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
   @include clearfix;
 }
 .header a {
-  color: #fff;
+  color: #eee;
   display: inline-block;
 }
 .header img {
