--- a/source/stylesheets/partials/_layout-vars.scss
+++ b/source/stylesheets/partials/_layout-vars.scss
@@ -1,9 +1,13 @@
-$navy: #243640;
+$navy: #555555;
 $blue1: #2185c5;
 $blue2: #a7cae1;
 $bluegray1: #4b6475;
 $teal1: #03786D;
 $teal2: #00a79d;
+$global_header_bg_color: #232B2F;
+$global_header_pivotal_logo: url(/images/icon-p-green.jpg);
+$global_header_pivotal_logo_height: 64px;
+$global_header_pivotal_logo_width: 64px;
 
 // ~COLORS
 // ===================================================
@@ -14,7 +18,7 @@ name: colors
 category: basics
 ---
 <div class="swatch-1">
-  $navy: #243640
+  $navy: #555555
 </div>
 <div class="swatch-2">
   $gray1: #424242
@@ -51,15 +55,15 @@ category: basics
 </div>
 */
 
-$color-accent: $teal1;
+$color-accent: $teal2;
 $color-accent-bright: $teal2;
 
 // link colors
-$color-link: $blue1;
-$color-link-border: $blue2;
+$color-link: $teal2;
+$color-link-border: $teal2;
 
-$color-border-tip: $blue2;
+$color-border-tip: $teal2;
 
-$color-bg-header: $navy;
-$color-bg-dark: $bluegray1;
+$color-bg-header: $teal2;
+$color-bg-dark: $teal2;
 
